feat(influxdb): query the database using Flux